# play-os

./: .gitignore  Cargo.toml  Makefile
src/: lib.rs  utils.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm  multiboot_header.asm
