[package]
name = "play_os"
version = "0.1.0"
authors = ["Cameron Derwin <camderwin@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
